# dppu

./: .gitmodules  README.md  setup.sh
docker/: DO_NOT_BUILD_HERE  README  install  java.log.6886d7acd6b3.root.log.java.20220816-050054.27716  javalog.properties  lock
ppu/bazel/: .repositories.bzl.swo  repositories.bzl
ppu/examples/cpp/: BUILD.bazel  fss_lr.cc  simple_lr.cc  utils.cc
ppu/examples/python/e2e/: jax_lr.py
ppu/examples/python/utils/: dataset_utils.py
ppu/ppu/: ppu.proto
ppu/ppu/binding/: ppu_io_test.py
ppu/ppu/hal/: polymorphic.cc  polymorphic.h  polymorphic_test.cc  prot_wrapper.cc  prot_wrapper.h  ring.cc  ring.h
ppu/ppu/mpc/: BUILD.bazel  abkernels.cc  abkernels.h  factory.cc  interfaces.h  kernel.h
ppu/ppu/mpc/beaver/: BUILD.bazel  beaver.h  beaver_cheetah.cc  beaver_cheetah.h  beaver_fss.cc  beaver_fss.h  beaver_fss_test.cc  beaver_ref.cc  beaver_ref.h  beaver_test.cc  beaver_tfp.cc  beaver_tfp.h
ppu/ppu/mpc/cheetah/: arithmetic.h
ppu/ppu/mpc/dealer/: BUILD.bazel  dealer.h  dealer_ref.cc  dealer_ref.h  dealer_ref_test.cc  dealer_test.cc  dealer_test.h  dealer_tfp.cc  dealer_tfp.h  dealer_tfp_test.cc  test.cc  trusted_party.cc
ppu/ppu/mpc/fss/: BUILD.bazel  arithmetic.cc  arithmetic.h  boolean.cc  boolean.h  conversion.h  io.cc  io.h  object.h  protocol.cc  protocol.h  protocol_bench.cc  protocol_test.cc
ppu/ppu/mpc/semi2k/: arithmetic.cc  arithmetic.h  protocol.cc
ppu/ppu/mpc/util/: ring_ops.cc  ring_ops.h
ppu/ppu/numpy/: basic.cc  basic.h
