
# Copyright 2021 Ant Group Co., Ltd.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#   http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


load("//bazel:ppu.bzl", "ppu_cc_library", "ppu_cc_test")

package(default_visibility = ["//visibility:public"])

ppu_cc_library(
    name = "dealer",
    hdrs = ["dealer.h"],
    deps = [
        "//ppu/core:array_ref",
        "//ppu/core:array_ref_util",
        "//ppu/core:type_util",
    ],
)

ppu_cc_library(
    name = "dealer_test",
    testonly = 1,
    srcs = ["dealer_test.cc"],
    hdrs = ["dealer_test.h"],
    deps = [
        ":dealer",
        "//ppu/mpc/util:ring_ops",
        "//ppu/mpc/util:test_util",
        "@com_google_googletest//:gtest",
    ],
    alwayslink = True,
)

ppu_cc_library(
    name = "dealer_ref",
    srcs = ["dealer_ref.cc"],
    hdrs = ["dealer_ref.h"],
    deps = [
        ":dealer",
        "//ppu/mpc/util:ring_ops",
    ],
)

ppu_cc_test(
    name = "dealer_ref_test",
    srcs = ["dealer_ref_test.cc"],
    deps = [
        ":dealer_ref",
        ":dealer_test",
    ],
)


ppu_cc_library(
    name = "trusted_party",
    srcs = ["trusted_party.cc"],
    hdrs = ["trusted_party.h"],
    deps = [
        "//ppu/core:type_util",
        "//ppu/mpc/util:ring_ops",
    ],
)

ppu_cc_library(
    name = "dealer_tfp",
    srcs = ["dealer_tfp.cc"],
    hdrs = ["dealer_tfp.h"],
    deps = [
        ":dealer",
        ":trusted_party",
        "//ppu/link",
        "//ppu/mpc/util:ring_ops",
        "//ppu/utils:serialize",
    ],
)

ppu_cc_test(
    name = "dealer_tfp_test",
    srcs = ["dealer_tfp_test.cc"],
    deps = [
        ":dealer_test",
        ":dealer_tfp",
    ],
)



